@@ -11,7 +11,6 @@ import com.intellij.openapi.vfs.VirtualFileVisitor;
 import org.jetbrains.annotations.NotNull;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
@@ -21,7 +20,7 @@ public class LiferayLibraryRootsComponentDescriptor extends DefaultLibraryRootsC
     @NotNull
     @Override
     public List<? extends RootDetector> getRootDetectors() {
-        return Arrays.asList(new RootDetector[]{new LiferayRootDetector(OrderRootType.CLASSES)});
+        return List.of(new LiferayRootDetector(OrderRootType.CLASSES));
     }
 
     @NotNull
@@ -32,7 +31,7 @@ public class LiferayLibraryRootsComponentDescriptor extends DefaultLibraryRootsC
         return Collections.emptyList();
     }
 
-    private class LiferayRootDetector extends RootDetector {
+    private static class LiferayRootDetector extends RootDetector {
 
         public LiferayRootDetector(OrderRootType rootType) {
             super(rootType, true, "classes");
@@ -43,7 +42,7 @@ public class LiferayLibraryRootsComponentDescriptor extends DefaultLibraryRootsC
         public Collection<VirtualFile> detectRoots(@NotNull final VirtualFile rootCandidate, @NotNull final ProgressIndicator progressIndicator) {
             final List<VirtualFile> result = new ArrayList<>();
 
-                VfsUtilCore.visitChildrenRecursively(rootCandidate, new VirtualFileVisitor(new VirtualFileVisitor.Option[0]) {
+                VfsUtilCore.visitChildrenRecursively(rootCandidate, new VirtualFileVisitor() {
                     public boolean visitFile(@NotNull VirtualFile file) {
                         if (file.isDirectory()) {
                             progressIndicator.setText2(file.getPath());
